--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,15 +9,15 @@
 
     <ImageView
         android:id="@+id/education"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="401dp"
+        android:layout_height="393dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="277dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="277dp"
         android:contentDescription="@string/logo"
         android:foregroundGravity="center"
-        android:src="@drawable/logo2"
+        android:src="@drawable/logo789"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
