--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -94,7 +94,7 @@
                 android:id="@+id/textView6"
                 android:layout_width="321dp"
                 android:layout_height="457dp"
-                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginLeft="@dimen/_25sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginRight="@dimen/_20sdp"
                 android:gravity="center"
@@ -119,16 +119,16 @@
         app:fab_addButtonPlusIconColor="@color/black"
         app:layout_anchor="@id/bottomAppBar"
         app:layout_anchorGravity="center_horizontal">
-        <!--        <com.getbase.floatingactionbutton.FloatingActionButton-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            app:fab_title="Gallery"-->
-        <!--            app:fab_icon="@drawable/apply"-->
-        <!--            app:fabCustomSize="@dimen/_100sdp"-->
-        <!--            app:fab_colorNormal="@color/white"-->
-        <!--            app:fab_colorPressed="@color/white"-->
-        <!--            app:fab_size="normal"-->
-        <!--            android:id="@+id/application"/>-->
+                <com.getbase.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:fab_title="Gallery"
+                    app:fab_icon="@drawable/apply"
+                    app:fabCustomSize="@dimen/_100sdp"
+                    app:fab_colorNormal="@color/white"
+                    app:fab_colorPressed="@color/white"
+                    app:fab_size="normal"
+                    android:id="@+id/application"/>
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/gallery"
