--- a/app/src/main/res/layout/activity_phoneauth.xml
+++ b/app/src/main/res/layout/activity_phoneauth.xml
@@ -122,9 +122,10 @@ android:layout_marginTop="@dimen/_20sdp"
         android:id="@+id/mait"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_70sdp"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_30sdp"
         android:layout_marginBottom="@dimen/_10sdp"
+       android:textSize="@dimen/_15sdp"
         android:text="@string/appl"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
