--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -8,69 +8,55 @@
     android:foregroundTint="#9F1BD8"
     android:paddingTop="2dp"
     tools:context=".MainActivity">
-<com.google.android.material.bottomappbar.BottomAppBar
-    android:id="@+id/bottomAppBar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom"
-    android:backgroundTint="#3B4063C5"
-    app:fabCradleMargin="10dp"
-    app:fabCradleRoundedCornerRadius="10dp"
-    app:fabCradleVerticalOffset="10dp">
-    <com.google.android.material.bottomnavigation.BottomNavigationView
+
+
+<!--FLOATING BUTTON-->
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottomAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bottomNavigationView"
-        android:layout_marginRight="16dp"
-        app:menu="@menu/bottom_nav_menu"
-        android:background="@drawable/transparent_background"
-        />
-</com.google.android.material.bottomappbar.BottomAppBar>
+        android:layout_gravity="bottom"
 
+        app:fabCradleMargin="10dp"
+        android:backgroundTint="#3B3864DF"
+        app:fabCradleRoundedCornerRadius="50dp">
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/transparent_background"
+            app:labelVisibilityMode="labeled"
+            app:menu="@menu/bottom_nav_menu" />
+
+    </com.google.android.material.bottomappbar.BottomAppBar>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_15sdp"
-        app:fab_addButtonColorNormal="#E42CE3CD"
-        app:fab_addButtonColorPressed="@color/white"
-        app:fab_addButtonPlusIconColor="@color/black"
+        android:backgroundTint="@color/white"
+        android:src="@drawable/basline_add"
         app:layout_anchor="@id/bottomAppBar"
-        app:layout_anchorGravity="center_horizontal">
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_title="Gallery"
-            app:fab_icon="@drawable/apply"
-            app:fabCustomSize="@dimen/_100sdp"
-            app:fab_colorNormal="@color/white"
-            app:fab_colorPressed="@color/white"
-            app:fab_size="normal"
-            android:id="@+id/application"/>
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/gallery"
-            android:onClick="gallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_colorNormal="@color/white"
-            app:fab_colorPressed="@color/white"
-            app:fab_icon="@drawable/baseline_photo_library_24"
-            app:fab_size="normal"
-            app:fab_title="@string/gallery"
-            />
-
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
-
+        app:maxImageSize="40dp"
+        android:id="@+id/fab"
+        app:tint="@color/blue"/>
+<!--FLOATING BUTTON END-->
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="@dimen/_90sdp"
         android:layout_height="@dimen/_80sdp"
-        android:layout_marginStart="@dimen/_105sdp"
+        android:layout_marginStart="@dimen/_107sdp"
         android:layout_marginEnd="@dimen/_25sdp"
         android:layout_marginTop="@dimen/_30sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         android:contentDescription="@string/image_string"
         app:layout_constraintTop_toTopOf="parent"
