--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,13 +106,13 @@
       app:layout_constraintVertical_bias="0.801" />
 
   <TextView
-      android:id="@+id/textView4"
+      android:id="@+id/forgot"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:shadowColor="@color/black"
       android:text="@string/forget"
       android:textSize="@dimen/_13ssp"
-      android:textStyle="normal"
+      android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.887"
