--- a/app/src/main/res/layout/activity_mission.xml
+++ b/app/src/main/res/layout/activity_mission.xml
@@ -56,13 +56,14 @@
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="347dp"
-                android:layout_height="591dp"
-                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_width="327dp"
+                android:layout_height="678dp"
+                android:layout_marginLeft="@dimen/_25sdp"
                 android:layout_marginTop="@dimen/_1sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:gravity="center"
                 android:text="@string/mission_content"
+                android:textAlignment="center"
                 android:textSize="@dimen/_17ssp"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
