--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,10 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">
+            @anim/bottom
+        </item>
+
+    </style>
 </resources>
